# ChangeLog for dev-ruby/pdf-reader
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-reader/ChangeLog,v 1.5 2010/01/28 19:10:12 flameeyes Exp $

*pdf-reader-0.8.2 (28 Jan 2010)

  28 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +pdf-reader-0.8.2.ebuild:
  Version bump, port to fakegem, add support for Ruby 1.9 and JRuby as well.

  27 Dec 2009; Hans de Graaff <graaff@gentoo.org> pdf-reader-0.7.5.ebuild:
  Fix building with USE=doc -test by always depending on rspec since it is
  required in the Rakefile, fixing bug 298481.

  27 Dec 2009; Hans de Graaff <graaff@gentoo.org> -pdf-reader-0.7.4.ebuild:
  Remove old version.

*pdf-reader-0.7.5 (23 Aug 2009)

  23 Aug 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +pdf-reader-0.7.5.ebuild:
  Version bump, thanks to upstream who tagged the new release.

*pdf-reader-0.7.4 (16 Jul 2009)

  16 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +pdf-reader-0.7.4.ebuild, +metadata.xml:
  Initial import of pdf-reader as test dependency of prawn.
