@@ -3,14 +3,16 @@ Hash: SHA1
 
 DIST pdf-reader-0.7.5.tgz 7878537 RMD160 1df215dee11ed3136cd22a716b86f4e5a20b8dc1 SHA1 886deadd160c526f457b1f6977aeae520469014c SHA256 e34fc41f66f273f8e87066fe75d364388b3764d3409f1f78968e08bd4aaa8d7f
 DIST pdf-reader-git-0.8.2.tgz 7992947 RMD160 8eb2c271d9b13e603bd9a917467e58e4a41ec407 SHA1 14d32ba1e224750d35c24620fe13e9aded61d88a SHA256 5da4662a8e3e93bbde6ae81ba8ca4b36b42cf15fb3a9228cf19f9f23c6c61500
+DIST pdf-reader-git-0.8.3.tgz 8186368 RMD160 eace842b4891881f6be71f8b64c2d9dbdb25e770 SHA1 9c90fb6e5d158210ae4d71ae8a99c5ed1edd3c31 SHA256 14f0fdcb794efdd4316d099c6d9e31a60f09aece6236e1404fca732f49f22b9a
 EBUILD pdf-reader-0.7.5.ebuild 1754 RMD160 bd36e1b874fcfc9e49a043488dee782a79cd9250 SHA1 85ac15fc541d81a22f97c4b48e9a079ead71b84c SHA256 534445afeddc76ea7c189802acd99a18b885bd66ed652082310472645dc08e12
 EBUILD pdf-reader-0.8.2.ebuild 1205 RMD160 544b4dc91f7b7cc029164b9cbb097335c9280398 SHA1 eaa3315767c4c6f624c78045b109b715d4975832 SHA256 87616cf0b02b07baf886d172d15fe6768460d1aff6f3cda398a88a7a3eef8b33
-MISC ChangeLog 1080 RMD160 94675f4147900074312c1948c87a5e30ccd189a8 SHA1 5a612ebe4b9b59c62dd754a1a9a8d6ed47943f33 SHA256 122fb799d713418330e039ce9b29dd3d443b39b901448daac1137568c3d0b51d
+EBUILD pdf-reader-0.8.3.ebuild 1404 RMD160 8eefc00ca33b6f35d4c298b29c58910822a61931 SHA1 d2188a9d20012b6e69b85cf135cc611cce29bd60 SHA256 35432193f58cf1eb664d3c1c04bf8a65ef7a5c935f3cbfa438ef9baa749e7acd
+MISC ChangeLog 1214 RMD160 6b77019f68ec8dafcfec9054af2d2f508b5ba96e SHA1 e67795f29f8532701009dcc99045c2b776181b9a SHA256 49b007151ff1f5142f2c6880710df49860ff3aa33f0b423afe609e1d3580b3fc
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkth4M8ACgkQAiZjviIA2XiYGgCg7D7scQS1bdTq7fGgfA0WINBM
-BgoAnRKzKkpEflAQdznc9irpOveAip4S
-=0KAh
+iEYEARECAAYFAkt4fO8ACgkQAiZjviIA2Xg6DQCg3u3fr5g/pzDuh+JmUNf22D0k
+JugAoMAoHxKAsvg/BRSusEash5jpWBOd
+=fUX9
 -----END PGP SIGNATURE-----
