@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/pdf-reader
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-reader/ChangeLog,v 1.5 2010/01/28 19:10:12 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-reader/ChangeLog,v 1.6 2010/02/14 22:45:12 flameeyes Exp $
+
+*pdf-reader-0.8.3 (14 Feb 2010)
+
+  14 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  +pdf-reader-0.8.3.ebuild:
+  Version bump.
 
 *pdf-reader-0.8.2 (28 Jan 2010)
 
